Fixed horizontal scrolling on long dir names

--- a/angularclient/src/styles.scss
+++ b/angularclient/src/styles.scss
@@ -96,7 +96,7 @@ $font-color: var(--font-color);
 
 // Browse
 .list-item {
-  white-space: nowrap;
+  white-space: hidden;
   place-content: start center;
   overflow: hidden;              /* "overflow"-Wert darf nicht "visible" sein */
   text-overflow: ellipsis;
